src/objects/fflbx__LockboxImportDefinition__c.object
<CustomObject>
    <customHelpPage>fflbx__lockboxhelp</customHelpPage>
    <fields>
        <fullName>fflbx__DateFormat__c</fullName>
        <label>Date Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>dd/mm/yyyy</fullName>
                </value>
                <value>
                    <fullName>dd-mm-yyyy</fullName>
                </value>
                <value>
                    <fullName>dd/mm/yy</fullName>
                </value>
                <value>
                    <fullName>dd-mm-yy</fullName>
                </value>
                <value>
                    <fullName>mm/dd/yyyy</fullName>
                </value>
                <value>
                    <fullName>mm-dd-yyyy</fullName>
                </value>
                <value>
                    <fullName>mm/dd/yy</fullName>
                </value>
                <value>
                    <fullName>mm-dd-yy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fflbx__DecimalSeparator__c</fullName>
        <label>Decimal Separator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>, (comma)</fullName>
                </value>
                <value>
                    <fullName>. (period)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fflbx__FileDelimiter__c</fullName>
        <label>File Delimiter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>, (comma)</fullName>
                </value>
                <value>
                    <fullName>; (semicolon)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fflbx__Lockbox__c</fullName>
        <label>Bank Lockbox</label>
        <referenceTo>fflbx__Lockbox__c</referenceTo>
        <relationshipLabel>Bank Lockbox Import Definitions</relationshipLabel>
        <relationshipName>LockboxImportDefinitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fflbx__StartRow__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Start Row</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fflbx__ThousandsSeparator__c</fullName>
        <label>Thousands Separator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>, (comma)</fullName>
                </value>
                <value>
                    <fullName>. (period)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fflbx__ZeroBasedPositions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Zero Based Positions</label>
        <type>Checkbox</type>
    </fields>
    <label>Bank Lockbox Import Definition</label>
    <listViews>
        <fullName>fflbx__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LID-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Lockbox Import Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>